--- a/MagicVilla_Web/Views/Home/Index.cshtml
+++ b/MagicVilla_Web/Views/Home/Index.cshtml
@@ -1,41 +1,8 @@
-﻿@model IEnumerable<MagicVilla_Web.Models.DTO.VillaDto>
-@{
-    ViewData["Title"] = "IndexVilla";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+﻿@{
+    ViewData["Title"] = "Home Page";
 }
 
-<div class="container p-4 border">
-    <div class="row pb-2">
-        <div class="col">
-            <h1 class="text-primary">Lista de Villas</h1>
-        </div>
-        <div class="col text-end pt-1">
-            <a asp-controller="Villa" asp-action="CrearVilla" class="btn btn-outline-primary"><i class="bi bi-plus-square-fill"></i>Crear Nueva Villa</a>
-        </div>
-    </div>
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Nombre</th>
-                <th>Ocupantes</th>
-                <th>Tarifa</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach(var item in Model)
-            {
-                <tr>
-                    <td>@item.Nombre</td>
-                    <td>@item.Ocupantes</td>
-                    <td>@((item.Tarifa).ToString("c"))</td>
-                    <td>
-                        <a asp-controller="Villa" asp-action="ActualizarVilla" class="btn btn-success"><i class="bi bi-pencil-square"></i></a>
-                        <a asp-controller="Villa" asp-action="RemoverVilla" class="btn btn-danger"><i class="bi bi-trash-fill"></i></a>
-                    </td>
-                </tr>
-            } 
-        </tbody>
-     </table>
+<div class="text-center">
+    <h1 class="display-4">Welcome</h1>
+    <p>Learn about<a href ="https://docs.microsoft.com/aspnet/core">building Wep apps with ASP.NET Core</a>.</p>
 </div>
