--- a/MagicVilla_Web/Views/Villa/IndexVilla.cshtml
+++ b/MagicVilla_Web/Views/Villa/IndexVilla.cshtml
@@ -14,7 +14,7 @@
         </div>
     </div>
 
-    <table class="table"
+    <table class="table">
         <thead>
             <tr>
                 <th>Nombre</th>
@@ -23,7 +23,7 @@
                 <th></th>
             </tr>
         </thead>
-        <body>
+        <tbody>
             @foreach (var item in Model)
             {
                     <tr>
@@ -36,6 +36,6 @@
                         </td>
                     </tr>
             }
-        </body>
+        </tbody>
      </table>
 </div>
